--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^7.1.1",
+    "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.2",
     "swiper": "^11.2.0"
   },
   "devDependencies": {
